# rust-ovgu-canteen

./: .gitignore  Cargo.toml  README.md
docs/: search-index.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/std/error/: trait.Error.js
docs/ovgu_canteen/: index.html  macro.ovgu_canteen_url.html  ovgu_canteen_url.m.html
docs/ovgu_canteen/ovgu/: enum.Error.html
docs/ovgu_canteen/ovgu/canteen/: enum.Allergenic.html  enum.CanteenDescription.html  index.html  struct.Canteen.html  struct.Day.html  struct.Price.html
docs/ovgu_canteen/ovgu/canteen/additive/: Additive.t.html  enum.Additive.html
docs/ovgu_canteen/ovgu/canteen/allergenic/: enum.Allergenic.html
docs/ovgu_canteen/ovgu/canteen/canteen/: CanteenDescription.t.html
docs/ovgu_canteen/ovgu/canteen/from_element/: trait.FromElement.html
docs/ovgu_canteen/ovgu/canteen/price/: struct.Price.html
docs/ovgu_canteen/ovgu/canteen/symbol/: enum.Symbol.html
docs/src/ovgu_canteen/: lib.rs.html
docs/src/ovgu_canteen/ovgu/: error.rs.html
docs/src/ovgu_canteen/ovgu/canteen/: additive.rs.html  canteen.rs.html  from_element.rs.html
examples/: canteens.json  json.rs  update_json.rs
src/: additive.rs  allergenic.rs  canteen.rs  constants.rs  day.rs  error.rs  lib.rs  main.rs  meal.rs  price.rs  symbol.rs
src/ovgu/: error.rs  mod.rs
src/ovgu/canteen/: additive.rs  allergenic.rs  canteen.rs  constants.rs  day.rs  from_element.rs  meal.rs  mod.rs  naivedate_serde.rs  price.rs  symbol.rs  traits.rs
src/tests/: additive.rs  allergenic.rs  mod.rs  price.rs  symbol.rs
tests/: downstairs.rs  upstairs.rs
