[package]
name = "ovgu-canteen"
version = "0.0.1"
authors = ["Fin Christensen"]
description = "A canteen parser library for the Otto-von-Guericke University Magdeburg."
documentation = "https://fin-ger.github.io/rust-ovgu-canteen/target/doc/ovgu_canteen/"
homepage = "https://fin-ger.github.io/rust-ovgu-canteen/"
repository = "https://github.com/fin-ger/rust-ovgu-canteen/"
readme = "README.md"
keywords = ["ovgu", "canteen", "mensa"]
categories = ["parsing"]
license = "GPL-3.0"

[dependencies]
scraper = "^0"
hyper = "^0"
hyper-native-tls = "^0"
chrono = { version = "^0", features = ["serde"] }
serde = "<1.0.0"
serde_derive = "<1.0.0"

[dev-dependencies]
serde_json = "<1.0.0"

[lib]
test = true
doctest = true
bench = false
doc = true
crate-type = ["lib"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false

[profile.test]
opt-level = 3
debug = true
debug-assertions = false

[profile.doc]
opt-level = 3
debug = false
debug-assertions = false
