[package]
name = "ovgu-canteen"
version = "0.0.5"
authors = ["Fin Christensen"]
description = "A canteen parser library for the Otto-von-Guericke University Magdeburg."
documentation = "https://docs.rs/ovgu-canteen/"
homepage = "https://fin-ger.github.io/rust-ovgu-canteen/"
repository = "https://github.com/fin-ger/rust-ovgu-canteen/"
readme = "README.md"
keywords = ["ovgu", "canteen", "mensa"]
categories = ["parsing"]
license = "GPL-3.0"

[dependencies]
scraper = "^0"
hyper = "^0"
hyper-openssl = "^0"
tokio-core = "^0"
chrono = { version = "^0", features = ["serde"] }
serde = "^1"
serde_derive = "^1"
num_cpus = "^0"
openssl = "^0"
futures = "^0"

[dev-dependencies]
serde_json = "^1"

[badges]
travis-ci = { repository = "https://github.com/fin-ger/rust-ovgu-canteen/", branch = "master" }

[package.metadata.docs.rs]
all-features = true

[lib]
test = true
doctest = true
bench = false
doc = true
crate-type = ["lib"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false

[profile.test]
opt-level = 3
debug = true
debug-assertions = false

[profile.doc]
opt-level = 3
debug = false
debug-assertions = false
