[package]
name = "ovgu-canteen"
version = "0.3.3-alpha.0"
authors = ["Fin Christensen"]
description = "A canteen parser library for the Otto-von-Guericke University Magdeburg."
documentation = "https://docs.rs/ovgu-canteen/"
homepage = "https://fin-ger.github.io/rust-ovgu-canteen/"
repository = "https://github.com/fin-ger/rust-ovgu-canteen/"
readme = "README.md"
keywords = ["ovgu", "canteen", "mensa"]
categories = ["parsing"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
scraper = "0.11.0"
hyper = "0.13.3"
hyper-tls = "0.4.1"
chrono = { version = "0.4.11", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
futures = "0.3.4"
failure = "0.1.7"
derive_more = "0.99.3"

[dev-dependencies]
serde_json = "1.0.48"
tokio = { version = "0.2.13", features = ["full"] }
[badges]
travis-ci = { repository = "https://github.com/fin-ger/rust-ovgu-canteen/", branch = "master" }

[package.metadata.docs.rs]
all-features = true

[lib]
test = true
doctest = true
bench = false
doc = true
crate-type = ["lib"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false

[profile.test]
opt-level = 3
debug = true
debug-assertions = false
